fixed some footer and aligning

--- a/css/styles.css
+++ b/css/styles.css
@@ -488,6 +488,12 @@ footer div i:hover {
 @media (max-width: 810px) {
     footer div a {
         font-size: 10px;
+        margin: 0 10px;
+    }
+
+    footer div i:hover {
+        font-size: 25px;
+        transition: 1000ms ease;
     }
 
     .description div {
@@ -530,5 +536,12 @@ footer div i:hover {
 @media (max-width: 420px) {
     .project-img div {
         height: 180px;
+    }
+
+    .project-img div i {
+        font-size: 50px;
+        margin: 60px 10px 0 10px;
+        display: none;
+        color: black;
     }
 }
